--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         <form class="modal-content">
             <div class="row">
                 <!-- City Name Input -->
-                <div class="input-field col s5" id="title">
-                    <input type="text" class="input-field col s4">
+                <div class="input-field col s5" >
+                    <input type="text" class="input-field col s4" id="cityInput">
                     <label>City</label>
                 </div>
 
@@ -42,7 +42,7 @@
                 <!-- dropdown for Country selection -->
                 <div class="input-field col s2">
                     <!-- <label>Select Country</label> -->
-                    <select class="browser-default" id="country" name="country">
+                    <select class="browser-default" id="country">
                         <option value="">select country</option>
                         <option value="GB">United Kingdom</option>
                         <option value="US">United States</option>
@@ -52,7 +52,7 @@
             </div>
         </form>
         <footer class="modal-footer">
-            <button class="modal-close waves-effect waves-light-blue light-blue darken-1 btn">Search</button>
+            <button class="modal-close waves-effect waves-light-blue light-blue darken-1 btn" id="cityButton"><i class="material-icons left">search</i>Search</button>
         </footer>
     </div>
     <!-- Postal Code Search Modal -->
@@ -62,15 +62,15 @@
         <form class="modal-content">
             <div class="row">
                 <!-- Postal Code Input -->
-                <div class="input-field col s6" id="zip">
-                    <input type="text" class="input-field col s6">
+                <div class="input-field col s6" >
+                    <input type="text" class="input-field col s6" id="zip">
                     <label>Zip/Postal Code</label>
                 </div>
 
                 <!-- dropdown for Country selection -->
                 <div class="input-field col s6">
                     <!-- <label>Select Country</label> -->
-                    <select class="browser-default" id="country" name="country">
+                    <select class="browser-default" id="country">
                         <option value="">select country</option>
                         <option value="GB">United Kingdom</option>
                         <option value="US">United States</option>
@@ -80,7 +80,7 @@
             </div>
         </form>
         <footer class="modal-footer">
-            <button class="modal-close waves-effect waves-light btn light-blue darken-1">Search</button>
+            <button class="modal-close waves-effect waves-light btn light-blue darken-1" id="zipButton"><i class="material-icons left">search</i>Search</button>
         </footer>
     </div>
 
