--- a/index.html
+++ b/index.html
@@ -61,8 +61,9 @@
             </div>
         </form>
         <footer class="modal-footer">
-            <button class="modal-close waves-effect waves-light-blue light-blue darken-1 btn" id="cityButton"><i
-                    class="material-icons left">search</i>Search</button>
+            <button data-target="citySearch"
+                class="modal-close waves-effect waves-light btn-large modal-trigger light-blue darken-1"
+                id="cityButton"><i class="material-icons left">search</i>Search</button>
         </footer>
     </div>
     <!-- Postal Code Search Modal -->
@@ -92,7 +93,16 @@
                     class="material-icons left">search</i>Search</button>
         </footer>
     </div>
-    
+    <!-- City Search Results Modal -->
+    <div class="modal" id="citySearch">
+        <section class="modal-content center" id="searchResults">
+            <!-- Result Buttons Populate here -->
+        </section>
+        <footer class="modal-footer">
+            <button class="modal-close waves-effect waves-light btn light-blue darken-1"><i
+                    class="material-icons left">chevron_left</i>Try a Different Search</button>
+        </footer>
+    </div>
 
 
 
